replace tomcat with undertow. refactor.