@@ -2,8 +2,6 @@ package robert.web.security.userdetails;
 
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public final class Roles {
@@ -13,12 +11,12 @@ public final class Roles {
     public static final List<SimpleGrantedAuthority> ROLE_USER;
 
     static {
-        SimpleGrantedAuthority roleUser = new SimpleGrantedAuthority("ROLE_USER");
-        SimpleGrantedAuthority roleAdmin = new SimpleGrantedAuthority("ROLE_ADMIN");
-        SimpleGrantedAuthority roleActuator = new SimpleGrantedAuthority("ROLE_ACTUATOR");
+        var roleUser = new SimpleGrantedAuthority("ROLE_USER");
+        var roleAdmin = new SimpleGrantedAuthority("ROLE_ADMIN");
+        var roleActuator = new SimpleGrantedAuthority("ROLE_ACTUATOR");
 
-        ROLE_USER = Collections.singletonList(roleUser);
-        ROLE_ADMIN = Arrays.asList(roleUser, roleAdmin, roleActuator);
+        ROLE_USER = List.of(roleUser);
+        ROLE_ADMIN = List.of(roleUser, roleAdmin, roleActuator);
     }
 
     private Roles() {
